[package]
name = "cockroach_"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version  = "2.0", features = ["postgres", "serde_json", "64-column-tables", "time"] }
strum = { version = "0.26.2", features = ["derive"] }
serde_json = "*"
serde = { version = "*", features = ["derive"]}
time = { version = "0.3.35", features = ["serde", "serde-well-known", "std"] }
axum = {version = "*"}
anyhow = {version = "*"}
tokio = {version = "*"}
futures = {version = "*"}

diesel_models  = {git = "https://github.com/juspay/hyperswitch.git", rev = "af8b554dabe43f80601b1adcb777996d6ca3133e"}
common_utils  = {git = "https://github.com/juspay/hyperswitch.git", rev = "af8b554dabe43f80601b1adcb777996d6ca3133e"}
common_enums  = {git = "https://github.com/juspay/hyperswitch.git", rev = "af8b554dabe43f80601b1adcb777996d6ca3133e"}
